--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,88 +2,91 @@
   "name": "quantum-trade-frontend",
   "version": "2.0.0",
   "private": true,
-  "description": "Quantum AI Trading Platform - Advanced React Frontend",
-  "keywords": ["trading", "crypto", "ai", "react", "websocket", "realtime"],
-  "author": "Akraa Trading",
+  "description": "Advanced E-Commerce & Trading Platform - React Frontend",
+  "keywords": ["ecommerce", "trading", "crypto", "ai", "react", "websocket", "realtime"],
+  "author": "Your Company",
   "license": "MIT",
+  
   "dependencies": {
-    // === الأساسيات الحالية ===
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "crypto-js": "^4.2.0",
-    "i18next": "^22.5.1",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-i18next": "^11.18.6",
+    // === 🎯 الأساسيات الأساسية ===
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-
-    // === 🚀 الإضافات الجديدة للتداول المتقدم ===
     
-    // 📊 إدارة الحالة المتقدمة
-    "@reduxjs/toolkit": "^2.0.1",
-    "react-redux": "^9.0.4",
+    // === 🛣️ التوجيه والتنقل ===
+    "react-router-dom": "^6.15.0",
+    
+    // === 🔌 التواصل مع API ===
+    "axios": "^1.5.0",
+    "axios-retry": "^4.2.1",
+    
+    // === 📊 إدارة الحالة المتقدمة ===
+    "@reduxjs/toolkit": "^1.9.5",
+    "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
-
-    // 🔌 التواصل في الوقت الحقيقي
+    
+    // === 🔌 التواصل في الوقت الحقيقي ===
     "socket.io-client": "^4.7.4",
     "reconnecting-websocket": "^4.4.0",
-    "axios": "^1.5.1",
-    "axios-retry": "^4.2.1",
-
-    // 📈 الرسوم البيانية والتداول
+    
+    // === 📈 الرسوم البيانية والتداول ===
     "recharts": "^2.8.0",
-    "react-stockcharts": "^0.8.0-beta.1",
     "lightweight-charts": "^4.1.0",
-    "trading-view-charts": "^1.0.2",
-
-    // 🎯 واجهة المستخدم المتقدمة
+    
+    // === 🎯 واجهة المستخدم المتقدمة ===
     "framer-motion": "^10.16.4",
     "react-spring": "^9.7.3",
     "react-tooltip": "^5.21.1",
     "react-hot-toast": "^2.4.1",
     "react-loading-skeleton": "^3.3.1",
     "react-confetti": "^6.1.0",
-
-    // 🔐 الأمان المتقدم
+    
+    // === 🔐 الأمان المتقدم ===
+    "crypto-js": "^4.2.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "bcryptjs": "^2.4.3",
     "qrcode.react": "^3.1.0",
-
-    // 📱 التصميم المتجاوب
+    
+    // === 🌍 الترجمة والدولية ===
+    "i18next": "^22.5.1",
+    "react-i18next": "^11.18.6",
+    
+    // === 🎨 التصميم والمظهر ===
+    "tailwindcss": "^3.3.3",
     "clsx": "^2.0.0",
     "tailwind-merge": "^1.14.0",
+    "lucide-react": "^0.288.0",
+    "react-icons": "^4.12.0",
+    
+    // === 📱 التصميم المتجاوب ===
     "react-responsive": "^9.0.2",
     "react-device-detect": "^2.2.3",
-
-    // ⚡ الأداء والتحسين
+    
+    // === ⚡ الأداء والتحسين ===
     "react-window": "^1.8.8",
     "react-virtualized-auto-sizer": "^1.0.20",
     "lazysizes": "^5.3.2",
-    "webpack-bundle-analyzer": "^4.10.1",
-
-    // 📊 التحليلات والتقارير
+    
+    // === 🔄 الإدارة الذكية للنماذج ===
+    "react-hook-form": "^7.47.0",
+    "yup": "^1.3.2",
+    "zod": "^3.22.4",
+    
+    // === 📊 التحليلات والتقارير ===
     "date-fns": "^2.30.0",
     "numeral": "^2.0.6",
     "lodash": "^4.17.21",
     "uuid": "^9.0.1",
-
-    // 🎨 الأيقونات والتصميم
-    "lucide-react": "^0.288.0",
-    "react-icons": "^4.12.0",
-    "flag-icons": "^6.11.0",
-
-    // 🔄 الإدارة الذكية
-    "react-query": "^3.39.3",
-    "react-hook-form": "^7.47.0",
-    "yup": "^1.3.2",
-    "zod": "^3.22.4",
-
-    // 📲 PWA والتجربة
+    
+    // === 🧪 الاختبارات ===
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.5.1",
+    "web-vitals": "^3.5.0",
+    
+    // === 📲 PWA والتجربة ===
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
     "workbox-cacheable-response": "^6.6.0",
@@ -94,29 +97,51 @@
     "workbox-routing": "^6.6.0",
     "workbox-strategies": "^6.6.0"
   },
+  
   "scripts": {
-    // === السكريبتات الحالية ===
+    // === 🚀 السكريبتات الأساسية ===
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-
-    // === 🚀 السكريبتات الجديدة المتقدمة ===
+    
+    // === ⚡ سكريبتات التطوير المتقدمة ===
     "dev": "react-scripts start",
     "build:prod": "npm run build && npm run analyze",
     "build:staging": "REACT_APP_ENV=staging npm run build",
-    "analyze": "npm run build && npx webpack-bundle-analyzer build/static/js/*.js",
+    "build:analyze": "npm run build && npx webpack-bundle-analyzer build/static/js/*.js",
+    
+    // === 🛠️ سكريبتات الجودة ===
     "type-check": "tsc --noEmit",
-    "lint": "eslint src/**/*.{js,jsx,ts,tsx}",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx} --max-warnings=0",
     "lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix",
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx,json,css,md}",
+    "format:check": "prettier --check src/**/*.{js,jsx,ts,tsx,json,css,md}",
+    
+    // === 🔒 سكريبتات الأمان ===
     "security-audit": "npm audit --audit-level=high",
-    "bundle-report": "npm run build && npx webpack-bundle-analyzer build/static/js/*.js -r build/bundle-report.html",
+    "security:fix": "npm audit fix",
+    
+    // === 📊 سكريبتات التحليل ===
+    "analyze": "npm run build && npx webpack-bundle-analyzer build/static/js/*.js -r build/bundle-report.html",
+    "bundle-report": "npm run build && npx webpack-bundle-analyzer build/static/js/*.js --analyze-mode=static",
+    
+    // === 🧪 سكريبتات الاختبار ===
     "test:coverage": "npm test -- --coverage --watchAll=false",
     "test:ci": "npm run test -- --coverage --watchAll=false --silent",
+    "test:watch": "npm test -- --watch",
+    
+    // === 🚀 سكريبتات النشر ===
     "serve": "serve -s build -l 3000",
-    "pwa:generate": "workbox generateSW workbox-config.js"
+    "pwa:generate": "workbox generateSW workbox-config.js",
+    "deploy:preview": "npm run build:staging && npm run serve",
+    
+    // === 🔄 سكريبتات المساعدة ===
+    "clean": "rm -rf build node_modules/.cache",
+    "reinstall": "rm -rf node_modules package-lock.json && npm install",
+    "postinstall": "npm run type-check && npm run lint"
   },
+  
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -124,40 +149,65 @@
     ],
     "rules": {
       "react-hooks/exhaustive-deps": "warn",
-      "no-unused-vars": "warn",
-      "prefer-const": "error"
-    }
+      "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
+      "prefer-const": "error",
+      "no-console": ["warn", { "allow": ["warn", "error"] }],
+      "react/prop-types": "off",
+      "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }]
+    },
+    "overrides": [
+      {
+        "files": ["**/*.ts", "**/*.tsx"],
+        "parser": "@typescript-eslint/parser",
+        "plugins": ["@typescript-eslint"],
+        "extends": [
+          "react-app",
+          "react-app/jest",
+          "plugin:@typescript-eslint/recommended"
+        ]
+      }
+    ]
   },
+  
   "browserslist": {
     "production": [
       ">0.2%",
       "not dead",
       "not op_mini all",
       "not ie 11",
-      "not ie_mob 11"
+      "not ie_mob 11",
+      "not samsung 4",
+      "not baidu 7"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "last 1 edge version"
     ]
   },
+  
   "devDependencies": {
-    // === التبعيات الحالية ===
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.0",
-
-    // === 🛠️ أدوات التطوير الجديدة ===
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
-    "@types/jest": "^29.5.8",
-    "@types/lodash": "^4.14.202",
-    "@types/node": "^20.8.7",
+    // === 🎨 التصميم والمظهر ===
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3",
+    
+    // === 🛠️ TypeScript ===
+    "typescript": "^5.2.2",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@types/node": "^20.8.6",
+    "@types/jest": "^29.5.5",
+    
+    // === 🛠️ أنواع الحزم ===
+    "@types/lodash": "^4.14.199",
     "@types/uuid": "^9.0.7",
     "@types/crypto-js": "^4.2.1",
     "@types/js-cookie": "^3.0.6",
-    "typescript": "^5.2.2",
+    "@types/bcryptjs": "^2.4.6",
+    
+    // === 🎯 أدوات الجودة ===
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "eslint": "^8.51.0",
@@ -165,40 +215,72 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    
+    // === 🎨 تنسيق الكود ===
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
+    
+    // === 🚀 أدوات المساعدة ===
     "serve": "^14.2.1",
     "cross-env": "^7.0.3",
     "npm-run-all": "^4.1.5",
+    "webpack-bundle-analyzer": "^4.10.1",
+    
+    // === 🔒 أدوات الأمان ===
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2"
   },
+  
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "pre-push": "npm run test:ci"
+      "pre-push": "npm run test:ci && npm run build",
+      "post-merge": "npm install",
+      "post-checkout": "npm run type-check"
     }
   },
+  
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "eslint --fix",
       "prettier --write"
     ],
-    "*.{json,css,md}": [
+    "*.{json,css,md,html}": [
+      "prettier --write"
+    ],
+    "*.{css,scss}": [
       "prettier --write"
     ]
   },
+  
   "proxy": "http://localhost:5000",
   "homepage": ".",
+  
   "engines": {
     "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+    "npm": ">=9.0.0",
+    "yarn": ">=1.22.0"
   },
+  
   "repository": {
     "type": "git",
-    "url": "https://github.com/akraa-trading/quantum-trade-frontend"
+    "url": "https://github.com/your-company/quantum-trade-frontend"
   },
+  
   "bugs": {
-    "url": "https://github.com/akraa-trading/quantum-trade-frontend/issues"
+    "url": "https://github.com/your-company/quantum-trade-frontend/issues"
+  },
+  
+  "homepage": "https://your-company.com",
+  
+  "volta": {
+    "node": "18.17.0",
+    "npm": "9.6.7"
+  },
+  
+  "resolutions": {
+    "**/react": "^18.2.0",
+    "**/react-dom": "^18.2.0"
   }
 }
