--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,85 +8,54 @@
   "license": "MIT",
   
   "dependencies": {
-    // === 🎯 الأساسيات الأساسية ===
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    
-    // === 🛣️ التوجيه والتنقل ===
     "react-router-dom": "^6.15.0",
-    
-    // === 🔌 التواصل مع API ===
     "axios": "^1.5.0",
     "axios-retry": "^4.2.1",
-    
-    // === 📊 إدارة الحالة المتقدمة ===
     "@reduxjs/toolkit": "^1.9.5",
     "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
-    
-    // === 🔌 التواصل في الوقت الحقيقي ===
     "socket.io-client": "^4.7.4",
     "reconnecting-websocket": "^4.4.0",
-    
-    // === 📈 الرسوم البيانية والتداول ===
     "recharts": "^2.8.0",
     "lightweight-charts": "^4.1.0",
-    
-    // === 🎯 واجهة المستخدم المتقدمة ===
     "framer-motion": "^10.16.4",
     "react-spring": "^9.7.3",
     "react-tooltip": "^5.21.1",
     "react-hot-toast": "^2.4.1",
     "react-loading-skeleton": "^3.3.1",
     "react-confetti": "^6.1.0",
-    
-    // === 🔐 الأمان المتقدم ===
     "crypto-js": "^4.2.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "bcryptjs": "^2.4.3",
     "qrcode.react": "^3.1.0",
-    
-    // === 🌍 الترجمة والدولية ===
     "i18next": "^22.5.1",
     "react-i18next": "^11.18.6",
-    
-    // === 🎨 التصميم والمظهر ===
     "tailwindcss": "^3.3.3",
     "clsx": "^2.0.0",
     "tailwind-merge": "^1.14.0",
     "lucide-react": "^0.288.0",
     "react-icons": "^4.12.0",
-    
-    // === 📱 التصميم المتجاوب ===
     "react-responsive": "^9.0.2",
     "react-device-detect": "^2.2.3",
-    
-    // === ⚡ الأداء والتحسين ===
     "react-window": "^1.8.8",
     "react-virtualized-auto-sizer": "^1.0.20",
     "lazysizes": "^5.3.2",
-    
-    // === 🔄 الإدارة الذكية للنماذج ===
     "react-hook-form": "^7.47.0",
     "yup": "^1.3.2",
     "zod": "^3.22.4",
-    
-    // === 📊 التحليلات والتقارير ===
     "date-fns": "^2.30.0",
     "numeral": "^2.0.6",
     "lodash": "^4.17.21",
     "uuid": "^9.0.1",
-    
-    // === 🧪 الاختبارات ===
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.1",
     "web-vitals": "^3.5.0",
-    
-    // === 📲 PWA والتجربة ===
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
     "workbox-cacheable-response": "^6.6.0",
@@ -99,44 +68,36 @@
   },
   
   "scripts": {
-    // === 🚀 السكريبتات الأساسية ===
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    
-    // === ⚡ سكريبتات التطوير المتقدمة ===
     "dev": "react-scripts start",
     "build:prod": "npm run build && npm run analyze",
     "build:staging": "REACT_APP_ENV=staging npm run build",
     "build:analyze": "npm run build && npx webpack-bundle-analyzer build/static/js/*.js",
-    
-    // === 🛠️ سكريبتات الجودة ===
     "type-check": "tsc --noEmit",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx} --max-warnings=0",
     "lint:fix": "eslint src/**/*.{js,jsx,ts,tsx} --fix",
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx,json,css,md}",
     "format:check": "prettier --check src/**/*.{js,jsx,ts,tsx,json,css,md}",
-    
-    // === 🔒 سكريبتات الأمان ===
     "security-audit": "npm audit --audit-level=high",
     "security:fix": "npm audit fix",
-    
-    // === 📊 سكريبتات التحليل ===
     "analyze": "npm run build && npx webpack-bundle-analyzer build/static/js/*.js -r build/bundle-report.html",
     "bundle-report": "npm run build && npx webpack-bundle-analyzer build/static/js/*.js --analyze-mode=static",
-    
-    // === 🧪 سكريبتات الاختبار ===
     "test:coverage": "npm test -- --coverage --watchAll=false",
     "test:ci": "npm run test -- --coverage --watchAll=false --silent",
     "test:watch": "npm test -- --watch",
     
-    // === 🚀 سكريبتات النشر ===
+    // ✅ الإضافات الجديدة للاختبارات
+    "test:backend": "jest backend/nodejs/tests/ --forceExit --detectOpenHandles",
+    "test:bot": "jest backend/nodejs/tests/bot.test.js --forceExit --detectOpenHandles",
+    "test:integration": "jest backend/nodejs/tests/integration/ --forceExit --detectOpenHandles",
+    "test:all": "npm run test:backend && npm run test",
+    
     "serve": "serve -s build -l 3000",
     "pwa:generate": "workbox generateSW workbox-config.js",
     "deploy:preview": "npm run build:staging && npm run serve",
-    
-    // === 🔄 سكريبتات المساعدة ===
     "clean": "rm -rf build node_modules/.cache",
     "reinstall": "rm -rf node_modules package-lock.json && npm install",
     "postinstall": "npm run type-check && npm run lint"
@@ -188,26 +149,19 @@
   },
   
   "devDependencies": {
-    // === 🎨 التصميم والمظهر ===
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
-    
-    // === 🛠️ TypeScript ===
     "typescript": "^5.2.2",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/node": "^20.8.6",
     "@types/jest": "^29.5.5",
-    
-    // === 🛠️ أنواع الحزم ===
     "@types/lodash": "^4.14.199",
     "@types/uuid": "^9.0.7",
     "@types/crypto-js": "^4.2.1",
     "@types/js-cookie": "^3.0.6",
     "@types/bcryptjs": "^2.4.6",
-    
-    // === 🎯 أدوات الجودة ===
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "eslint": "^8.51.0",
@@ -216,20 +170,19 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    
-    // === 🎨 تنسيق الكود ===
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
-    
-    // === 🚀 أدوات المساعدة ===
     "serve": "^14.2.1",
     "cross-env": "^7.0.3",
     "npm-run-all": "^4.1.5",
     "webpack-bundle-analyzer": "^4.10.1",
-    
-    // === 🔒 أدوات الأمان ===
     "husky": "^8.0.3",
-    "lint-staged": "^15.0.2"
+    "lint-staged": "^15.0.2",
+    
+    // ✅ الإضافات الجديدة لأدوات الاختبار
+    "jest": "^29.6.4",
+    "supertest": "^6.3.3",
+    "jest-environment-node": "^29.6.4"
   },
   
   "husky": {
@@ -282,5 +235,18 @@
   "resolutions": {
     "**/react": "^18.2.0",
     "**/react-dom": "^18.2.0"
+  },
+  
+  "jest": {
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/backend/nodejs/tests/**/*.test.js"
+    ],
+    "collectCoverageFrom": [
+      "backend/nodejs/**/*.js",
+      "!backend/nodejs/tests/**",
+      "!backend/nodejs/**/*.config.js"
+    ],
+    "coverageDirectory": "coverage/backend"
   }
 }
